--- a/views/add/index.ejs
+++ b/views/add/index.ejs
@@ -4,8 +4,8 @@
     <label for="movieName">Movie Name:</label>
     <input type="text" name="movieName" id="movieName" maxlength="40">
 
-    <label for="desc">Descript:</label>
-    <input type="text" name="desc" id="desc" maxlength="200">
+    <label for="desc">Description:</label>
+    <textarea name="desc" id="desc" maxlength="200" rows="4"></textarea>
 
     <label for='file'>Select files</label>
     <input id='file' type="file" name="image">
